tests/cases/fail/dict_get_or_args.p4
def main() -> None:
    colors: dict[str, str] = {"apple": "red"}
    print(colors.get_or("apple"))
